--- a/force-app/main/default/lwc/calculator/calculator.html
+++ b/force-app/main/default/lwc/calculator/calculator.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card  title="My Own Calculator">
+    <lightning-card  title="My Own Lightning Calculator">
         <p class="slds-p-horizontal_small">
             <lightning-input type="number" name="input1" label="Enter a number"  onchange={captureInput1}></lightning-input>
             <lightning-input type="number" name="input2" label="Enter a number" onchange={captureInput2}></lightning-input>
