few changes made to user registration form

--- a/force-app/main/default/lwc/userRegistrationForm/userRegistrationForm.html
+++ b/force-app/main/default/lwc/userRegistrationForm/userRegistrationForm.html
@@ -3,12 +3,12 @@
     <div class="demo-only" style="padding:0.5rem;background:#5e9ca0">
         <div class="slds-text-heading_large">User Registration Form</div>
     </div>
-    <lightning-input type="text" name="Firstname" label="First Name"  onchange={captureInput1}></lightning-input>
-    <lightning-input type="text" name="Lastname" label="Last Name" onchange={captureInput2}></lightning-input>
-    <lightning-slider label="Age" ></lightning-slider>
-    <lightning-input type="Email" name="e-mail" label="Email" onchange={captureInput2}></lightning-input>
-    <lightning-combobox name="Department" label="Department" placeholder="Select Department" options={departments} onchange={handleChange} ></lightning-combobox>
-    <lightning-input label="Show Previous result"  type="checkbox"  onchange={captureShowResult} >
-    </lightning-input>
+    <lightning-input label="Id" disabled value={userid}></lightning-input>
+    <lightning-input type="text" name="Firstname" label="First Name"  onchange={captureName}></lightning-input>
+    <lightning-slider label="Age" onchange={captureAge} ></lightning-slider>
+    <lightning-input type="Email" name="e-mail" label="Email" onchange={captureEmail}></lightning-input>
+    <lightning-input type="Phone" name="Phone" label="Phone" onchange={capturePhone}></lightning-input>
+    <lightning-combobox name="Department" label="Department" placeholder="Select Department" options={departments} onchange={captureDepartment} ></lightning-combobox>
+    <lightning-button label="Register User" icon-name="utility:edit"  variant="brand" onclick={createUser}></lightning-button>
     </div>
 </template>
